# api/openapi.yaml
@@ -237,12 +237,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/scenarioTemplateDIMConstraints'
       x-swagger-router-controller: DIMNUMConstraints
-  /constraints/dim/{userScenarioCd}/{constraintName}:
-    delete:
+  /constraints/dim/{userScenarioCd}/{attrName}:
+    put:
       tags:
         - DIM, NUM constraints
-      summary: Clear scenario dim constraint
-      operationId: clearScenarioDimConstraint
+      summary: Put scenario dim constraint
+      operationId: putScenarioDimConstraint
       parameters:
         - name: userScenarioCd
           in: path
@@ -252,7 +252,7 @@ paths:
           explode: false
           schema:
             type: string
-        - name: constraintName
+        - name: attrName
           in: path
           description: user scenario constraint name or CBN001 id for common constraint
           required: true
@@ -260,6 +260,39 @@ paths:
           explode: false
           schema:
             type: string
+      requestBody:
+        description: New user scenario constraint
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/userScenarioConstraintsPatch'
+        required: true
+      responses:
+        "200":
+          description: user scenario dim constraint deleted
+      x-swagger-router-controller: DIMNUMConstraints
+  /constraints/dim/{userScenarioCd}/generalConstraint:
+    put:
+      tags:
+        - DIM, NUM constraints
+      summary: Put scenario general dim constraint
+      operationId: putScenarioDimConstraintGeneral
+      parameters:
+        - name: userScenarioCd
+          in: path
+          description: user scenario code
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+      requestBody:
+        description: New user scenario constraint
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/userScenarioConstraintsPatch'
+        required: true
       responses:
         "200":
           description: user scenario dim constraint deleted
@@ -377,6 +410,44 @@ paths:
               schema:
                 $ref: '#/components/schemas/userScenarioConstraints'
       x-swagger-router-controller: DIMNUMConstraints
+    put:
+      tags:
+        - DIM, NUM constraints
+      summary: Put scenario constraints from user scenario constraints grid
+      operationId: putScenarioConstraint
+      parameters:
+        - name: userScenarioCd
+          in: path
+          description: user scenario code
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+      requestBody:
+        description: New user scenario constraint
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/userScenarioConstraintsPatch'
+        required: true
+      responses:
+        "200":
+          description: User scenario constraint been created
+          headers:
+            Location:
+              description: The URI of the newly created scenario template.
+              style: simple
+              explode: false
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/userScenarioConstraintsCreateResponse'
+        "400":
+          description: invalid body input
+      x-swagger-router-controller: DIMNUMConstraints
     patch:
       tags:
         - DIM, NUM constraints
@@ -445,36 +516,6 @@ paths:
       responses:
         "200":
           description: Bundles successfully updated
-      x-swagger-router-controller: DIMNUMConstraints
-  /constraints:
-    post:
-      tags:
-        - DIM, NUM constraints
-      summary: Posts scenario constraints from user scenario constraints grid
-      operationId: postScenarioConstraint
-      requestBody:
-        description: New user scenario constraint
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/userScenarioConstraintsCreate'
-        required: true
-      responses:
-        "200":
-          description: User scenario constraint been created
-          headers:
-            Location:
-              description: The URI of the newly created scenario template.
-              style: simple
-              explode: false
-              schema:
-                type: string
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/userScenarioConstraintsCreateResponse'
-        "400":
-          description: invalid body input
       x-swagger-router-controller: DIMNUMConstraints
   /userScenario:
     get:
@@ -843,7 +884,7 @@ paths:
         "200":
           description: optimization publicated response
       x-swagger-router-controller: Optimizations
-  /costreflist/{userScenarioCd}/get:
+  /costref/{userScenarioCd}:
     get:
       tags:
         - costref
@@ -866,7 +907,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/costRefRecord'
       x-swagger-router-controller: Costref
-  /costreflist/{userScenarioCd}/create:
     post:
       tags:
         - costref
@@ -896,16 +936,24 @@ paths:
               schema:
                 $ref: '#/components/schemas/costRefRecord'
       x-swagger-router-controller: Costref
-  /costreflist/{costrefId}/delete:
+  /costref/{userScenarioCd}/{channelName}:
     delete:
       tags:
         - costref
       summary: create new channel cost ref record
       operationId: deleteCostrefRecord
       parameters:
-        - name: costrefId
+        - name: channelName
           in: path
-          description: id of channel cost ref
+          description: unique name of channel cost ref
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+        - name: userScenarioCd
+          in: path
+          description: unique name of channel cost ref
           required: true
           style: simple
           explode: false
